Commas now keyed out line breaks in div tags will be displayed correctly

--- a/resources/layout.css
+++ b/resources/layout.css
@@ -28,8 +28,8 @@ body {
 }
 
 .showDisplay{
-	white-space: pre; 
-	word-break:break-word;
+	white-space: pre-wrap; 
+	overflow: auto;
 }
 
 .dungeon_map .medium{
